<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTintMode="multiply"
    tools:context=".ui.user_statistics.UserStatisticsFragment">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="138dp"
        android:layout_height="117dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/_43449988_1288841058683569_386499818967695791_n_removebg_preview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/textViewUserResults"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:hapticFeedbackEnabled="true"
        android:text="@string/user_statistics"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progressBarForDailyUser"
        style="?android:attr/progressBarStyle"
        android:layout_width="82dp"
        android:layout_height="71dp"
        android:layout_marginTop="16dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/imageView3"
        app:layout_constraintHorizontal_bias="0.078"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewTotalElevationValueUserStatistics"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:text="@string/dots"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/textViewTotalDistanceValueUserStatistics"
        app:layout_constraintTop_toTopOf="@+id/textViewTotalElevationUserStatistics" />

    <TextView
        android:id="@+id/textViewTotalDistanceUserStatistics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="76dp"
        android:text="@string/total_distance"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.004"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewUserResults" />

    <TextView
        android:id="@+id/textViewTotalTimeUserStatistics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/total_time"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/textViewTotalElevationUserStatistics"
        app:layout_constraintTop_toBottomOf="@+id/textViewTotalElevationUserStatistics" />

    <TextView
        android:id="@+id/textViewTotalElevationUserStatistics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/total_elevation"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/textViewTotalDistanceUserStatistics"
        app:layout_constraintTop_toBottomOf="@+id/textViewTotalDistanceUserStatistics" />

    <TextView
        android:id="@+id/textViewTotalDistanceValueUserStatistics"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/dots"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/textViewTotalDistanceUserStatistics"
        app:layout_constraintTop_toTopOf="@+id/textViewTotalDistanceUserStatistics" />

    <TextView
        android:id="@+id/textViewAverageSpeedValueUserStatistics"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:text="@string/dots"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/textViewAverageAverageSpeedValueUserStatistics"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textViewTotalTimeValueUserStatistics"
        app:layout_constraintTop_toTopOf="@+id/textViewAverageSpeedUserStatistics" />

    <TextView
        android:id="@+id/textViewTotalTimeValueUserStatistics"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:text="@string/dots"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/textViewTotalElevationValueUserStatistics"
        app:layout_constraintTop_toTopOf="@+id/textViewTotalTimeUserStatistics" />

    <TextView
        android:id="@+id/textViewAverageSpeedUserStatistics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/average_speed"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/textViewTotalTimeUserStatistics"
        app:layout_constraintTop_toBottomOf="@+id/textViewTotalTimeUserStatistics" />

    <Button
        android:id="@+id/buttonshowuserstatistics"
        android:layout_width="141dp"
        android:layout_height="56dp"
        android:background="@color/purple_200"
        android:text="@string/show_user_statistics"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textViewFrequencyCounter"
        app:layout_constraintTop_toBottomOf="@+id/textViewAverageSpeedUserStatistics" />

    <TextView
        android:id="@+id/textViewFrequency"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/textViewAverageSpeedValueUserStatistics"
        app:layout_constraintTop_toTopOf="@+id/textViewFrequencyCounter" />

    <TextView
        android:id="@+id/textViewAverageStatistics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/average_statistics"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/textViewAverageDistanceUserStatistics"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/textViewAverageDistanceUserStatistics"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="16dp"
        android:text="@string/dots"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewTotalDistanceValueUserStatistics"
        app:layout_constraintTop_toTopOf="@+id/textViewTotalDistanceValueUserStatistics" />

    <TextView
        android:id="@+id/textViewFrequencyCounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frequency"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonshowuserstatistics"
        app:layout_constraintStart_toStartOf="@+id/textViewAverageSpeedUserStatistics"
        app:layout_constraintTop_toBottomOf="@+id/textViewAverageSpeedUserStatistics"
        app:layout_constraintVertical_bias="0.51" />

    <TextView
        android:id="@+id/textViewAverageElevationUserStatistics"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/dots"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/textViewAverageDistanceUserStatistics"
        app:layout_constraintStart_toStartOf="@+id/textViewAverageDistanceUserStatistics"
        app:layout_constraintTop_toTopOf="@+id/textViewTotalElevationValueUserStatistics" />

    <TextView
        android:id="@+id/textViewAverageTimeUserStatistics"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/dots"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/textViewAverageElevationUserStatistics"
        app:layout_constraintStart_toStartOf="@+id/textViewAverageElevationUserStatistics"
        app:layout_constraintTop_toTopOf="@+id/textViewTotalTimeValueUserStatistics" />

    <TextView
        android:id="@+id/textViewAverageAverageSpeedValueUserStatistics"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/dots"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/textViewAverageTimeUserStatistics"
        app:layout_constraintStart_toStartOf="@+id/textViewAverageTimeUserStatistics"
        app:layout_constraintTop_toTopOf="@+id/textViewAverageSpeedValueUserStatistics" />

    <ProgressBar
        android:id="@+id/progressBarForDailyStats"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="106dp"
        android:layout_height="28dp"
        android:layout_marginBottom="112dp"
        android:max="100"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toEndOf="@+id/buttonshowuserstatistics" />

    <TextView
        android:id="@+id/textViewDailyGoal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/daily_goal"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/progressBarForDailyStats"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.802"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>